--- a/src/index.njk
+++ b/src/index.njk
@@ -70,36 +70,25 @@ layout: default.njk
 <hr />
 
 <p>
-    <small class="upper">This</small> guide to the design and simplification
-    of forms is intended for use by civil servants employed on Organisation
-    and Methods and Forms Design/Control work. It may also be of interest to
-    others both inside and outside the Government service.
+    <span class="lead-small-caps">This</span> guide to the design and simplification of forms is intended for use by civil servants employed on Organisation and Methods and Forms Design/Control work.
+    It may also be of interest to others both inside and outside the Government service.
 </p>
 <p>
-    The guide is concerned not only with design aspects of forms in the
-    popular sense but with a wide range of other office documents used in
-    collecting, recording, preserving, storing, or disseminating management
-    information. It does not cover departmental arrangements for controlling
-    forms and stationery although attention is drawn to the fundamental
-    importance of establishing the need for a form before embarking upon its
-    design.
+    The guide is concerned not only with design aspects of forms in the popular sense but with a wide range of other office documents used in collecting, recording, preserving, storing, or disseminating management information.
+    It does not cover departmental arrangements for controlling
+    forms and stationery although attention is drawn to the fundamental importance of establishing the need for a form before embarking upon its design.
 </p>
 <p>
-    The related subjects which, according to circumstances, may influence the
-    design of forms are too many and varied to be covered effectively in a
-    single book. Such matters have, therefore, been dealt with only to the
-    extent necessary to lead to the development of the right attitude and
-    approach to forms design, namely by outlining the more important factors
-    likely to be of practical value. It is hoped that this will serve both as
-    a guide to the newcomer to forms work and as an aide-mémoire to the
-    experienced officer. Fuller details about various related topics can be
-    found in the publications listed on <a href="/reference-material/">page 170</a>.
+    The related subjects which, according to circumstances, may influence the design of forms are too many and varied to be covered effectively in a single book.
+    Such matters have, therefore, been dealt with only to the extent necessary to lead to the development of the right attitude and approach to forms design, namely by outlining the more important factors likely to be of practical value.
+    It is hoped that this will serve both as a guide to the newcomer to forms work and as an <em>aide-mémoire</em> to the experienced officer.
+    Fuller details about various related topics can be found in the publications listed on <a href="/reference-material/">page 170</a>.
 </p>
 <p class="mb16">
     The illustrations in this book were prepared by H.M. Stationery Office.
 </p>
 <p>
-    NOTE: Most of the forms illustrated in this book have had to be shown in
+    <span class="small-caps">Note</span>: Most of the forms illustrated in this book have had to be shown in
     reduced size.
 </p>
 
