Improve deciding requirements section
Still needs alt text

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -156,6 +156,11 @@ button {
   list-style: none;
 }
 
+.list-item-silent {
+  /* todo add back semantics */
+  list-style: none;
+}
+
 ul,
 ol,
 dl,
