Simplify footer to avoid emoji

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -42,7 +42,7 @@
               You can contact me on Twitter at <a href="https://twitter.com/nickcolley">@nickcolley</a>
           </p>
       </details>
-      Made with <span aria-label="love">❤</span> by <a href="https://twitter.com/nickcolley">@nickcolley</a>
+      Made with love by <a href="https://twitter.com/nickcolley">@nickcolley</a>
     </footer>
     <script src="/assets/scripts.js"></script>
   </body>
