Ensure everything is inside a landmark

--- a/src/_includes/page.njk
+++ b/src/_includes/page.njk
@@ -29,6 +29,8 @@ layout: base.njk
 
 <hr/>
 
-<h2>Contents</h2>
+<nav id="table-of-contents">
+    <h2>Contents</h2>
 
-{% include 'contents.njk' %}
+    {% include 'contents.njk' %}
+</nav>
