--- a/src/index.njk
+++ b/src/index.njk
@@ -1,101 +1,103 @@
 ---
-layout: default.njk
+layout: base.njk
 ---
 
-<h1>
-    The Design<br />
-    of Forms
-    <small class="heading block upper spacing">
-        in Government departments
-    </small>
-</h1>
+<main id="main" role="main">
+    <h1>
+        The Design<br />
+        of Forms
+        <small class="heading block upper spacing">
+            in Government departments
+        </small>
+    </h1>
 
-<hr />
+    <hr />
 
-<p class="heading bold upper spacing mb8">
-    Compiled by the<br />
-    Organisation and Methods<br />
-    Division of<br />
-    Her Majesty's Treasury
-</p>
+    <p class="heading bold upper spacing mb8">
+        Compiled by the<br />
+        Organisation and Methods<br />
+        Division of<br />
+        Her Majesty's Treasury
+    </p>
 
-<p class="heading bold mb16">
-    London<br />
-    Her Majesty’s Stationery Office<br />
-    <span class="upper spacing">1962</span>
-</p>
+    <p class="heading bold mb16">
+        London<br />
+        Her Majesty’s Stationery Office<br />
+        <span class="upper spacing">1962</span>
+    </p>
 
-<p class="italic mb12">
-    First published 1945
-    <br />
-    Second edition 1962
-</p>
+    <p class="italic mb12">
+        First published 1945
+        <br />
+        Second edition 1962
+    </p>
 
-<p class="italic">
-    © Crown copyright 1962
-</p>
-<p>
-    Published by
-    <small class="block upper">Her Majesty's Stationary Office</small>
-</p>
+    <p class="italic">
+        © Crown copyright 1962
+    </p>
+    <p>
+        Published by
+        <small class="block upper">Her Majesty's Stationary Office</small>
+    </p>
 
-<p>
-    To be purchased from
-</p>
-<ul class="list--style-none">
-    <li>York House, Kingsway, London w.c.2</li>
-    <li>423 Oxford Street, London w.1</li>
-    <li>13A Castle Street, Edinburgh 2</li>
-    <li>109 St. Mary Street, Cardiff</li>
-    <li>39 King Street, Manchester 2</li>
-    <li>50 Fairfax Street, Bristol 1</li>
-    <li>35 Smallbrook, Ringway, Birmingham 5</li>
-    <li>80 Chichester Street, Belfast 1</li>
-    <li>or through any bookseller</li>
-</ul>
+    <p>
+        To be purchased from
+    </p>
+    <ul class="list--style-none">
+        <li>York House, Kingsway, London w.c.2</li>
+        <li>423 Oxford Street, London w.1</li>
+        <li>13A Castle Street, Edinburgh 2</li>
+        <li>109 St. Mary Street, Cardiff</li>
+        <li>39 King Street, Manchester 2</li>
+        <li>50 Fairfax Street, Bristol 1</li>
+        <li>35 Smallbrook, Ringway, Birmingham 5</li>
+        <li>80 Chichester Street, Belfast 1</li>
+        <li>or through any bookseller</li>
+    </ul>
 
-<p class="mb12">
-    Price £1 1s. od. net
-</p>
+    <p class="mb12">
+        Price £1 1s. od. net
+    </p>
 
-<p class="italic mb2">
-    Printed in England under the authority of Her Majesty’s Stationery Office
-    by The Curwen Press, Plaistow, London E.13
-</p>
+    <p class="italic mb2">
+        Printed in England under the authority of Her Majesty’s Stationery Office
+        by The Curwen Press, Plaistow, London E.13
+    </p>
 
-<h2>
-    Preface
-</h2>
+    <h2>
+        Preface
+    </h2>
 
-<hr />
+    <hr />
 
-<p>
-    <span class="lead-small-caps">This</span> guide to the design and simplification of forms is intended for use by civil servants employed on Organisation and Methods and Forms Design/Control work.
-    It may also be of interest to others both inside and outside the Government service.
-</p>
-<p>
-    The guide is concerned not only with design aspects of forms in the popular sense but with a wide range of other office documents used in collecting, recording, preserving, storing, or disseminating management information.
-    It does not cover departmental arrangements for controlling
-    forms and stationery although attention is drawn to the fundamental importance of establishing the need for a form before embarking upon its design.
-</p>
-<p>
-    The related subjects which, according to circumstances, may influence the design of forms are too many and varied to be covered effectively in a single book.
-    Such matters have, therefore, been dealt with only to the extent necessary to lead to the development of the right attitude and approach to forms design, namely by outlining the more important factors likely to be of practical value.
-    It is hoped that this will serve both as a guide to the newcomer to forms work and as an <em>aide-mémoire</em> to the experienced officer.
-    Fuller details about various related topics can be found in the publications listed on <a href="/reference-material/">page 170</a>.
-</p>
-<p class="mb16">
-    The illustrations in this book were prepared by H.M. Stationery Office.
-</p>
-<p>
-    <span class="small-caps">Note</span>: Most of the forms illustrated in this book have had to be shown in
-    reduced size.
-</p>
+    <p>
+        <span class="lead-small-caps">This</span> guide to the design and simplification of forms is intended for use by civil servants employed on Organisation and Methods and Forms Design/Control work.
+        It may also be of interest to others both inside and outside the Government service.
+    </p>
+    <p>
+        The guide is concerned not only with design aspects of forms in the popular sense but with a wide range of other office documents used in collecting, recording, preserving, storing, or disseminating management information.
+        It does not cover departmental arrangements for controlling
+        forms and stationery although attention is drawn to the fundamental importance of establishing the need for a form before embarking upon its design.
+    </p>
+    <p>
+        The related subjects which, according to circumstances, may influence the design of forms are too many and varied to be covered effectively in a single book.
+        Such matters have, therefore, been dealt with only to the extent necessary to lead to the development of the right attitude and approach to forms design, namely by outlining the more important factors likely to be of practical value.
+        It is hoped that this will serve both as a guide to the newcomer to forms work and as an <em>aide-mémoire</em> to the experienced officer.
+        Fuller details about various related topics can be found in the publications listed on <a href="/reference-material/">page 170</a>.
+    </p>
+    <p class="mb16">
+        The illustrations in this book were prepared by H.M. Stationery Office.
+    </p>
+    <p>
+        <span class="small-caps">Note</span>: Most of the forms illustrated in this book have had to be shown in
+        reduced size.
+    </p>
+</main>
 
-<h2 id="contents">
-    Contents
-</h2>
+<nav id="table-of-contents">
+    <h2 id="contents">Contents</h2>
 
-<hr />
+    <hr />
 
-{% include 'contents.njk' %}
+    {% include 'contents.njk' %}
+</nav>
