--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -275,6 +275,12 @@ figure > picture {
   margin-bottom: 2rem;
 }
 
+/* If there's a picture under the figcaption */
+figure > picture:last-child {
+  margin-bottom: 0;
+  margin-top: 2rem;
+}
+
 ol {
   --counter-start: 0;
   counter-reset: ordered-list-counter var(--counter-start);
@@ -294,7 +300,7 @@ ol li::before {
 }
 
 li {
-  margin-bottom: .5rem;
+  margin-bottom: 1rem;
 }
 
 table {
