--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -137,6 +137,16 @@ h3 {
   }
 }
 
+h4 {
+  font-size: 1.4rem;
+}
+
+@media only screen and (max-width: 60ch) {
+  h4 {
+    font-size: 1.1rem;
+  }
+}
+
 .heading {
   line-height: 2;
 }
