Update footer link

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -34,7 +34,7 @@
           </p>
       </details>
       <p>
-        Digitally remastered by <a href="https://twitter.com/nickcolley">@nickcolley</a>
+        Digitally remastered by <a href="https://nickcolley.co.uk">Nick Colley</a>
       </p>
       {% if pageNumber %}
         <p>
