Add theme switcher

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -21,6 +21,18 @@
     <hr/>
 
     <footer class="highlight-modern">
+      <fieldset class="theme-select" data-theme-select hidden>
+        <legend>Theme</legend>
+        <div class="field">
+          <input class="visually-hidden" id="light" value="light" name="theme" type="radio" checked/>
+          <label for="light">Light</label>
+        </div>
+        <div class="field">
+          <input class="visually-hidden" id="dark" value="dark" name="theme" type="radio" />
+          <label for="dark">Dark</label>
+        </div>
+      </fieldset>
+
       <details class="mb4">
           <summary>Report something wrong with this page</summary>
           <h4 class="mb0">GitHub</h4>
