Make use of no-js class

--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -21,7 +21,7 @@
     <hr/>
 
     <footer class="highlight-modern">
-      <fieldset data-theme-select hidden>
+      <fieldset class="js-visible" data-theme-select>
         <legend>Theme</legend>
         <div class="field">
           <input class="visually-hidden" id="light" value="light" name="theme" type="radio" checked/>
