--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -4,6 +4,7 @@
     <title>{% if title %}{{ title }} – {% endif %}{% if section %}{{ section }} – {% endif %}The Design of Forms in Government departments</title>
     <meta name="description" content="Digital remaster of the 1940s Design of Forms in Government Departments design manual." />
     <meta charset="utf-8">
+    <meta name="theme-color">
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="/assets/styles.css">
   </head>
