Fix colours after inverting

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -253,7 +253,7 @@ img {
 }
 
 [data-theme=dark] img {
-  filter: invert(1);
+  filter: invert(1) hue-rotate(180deg);
   mix-blend-mode: lighten;
 }
 
