--- a/src/gallery.njk
+++ b/src/gallery.njk
@@ -1,22 +1,32 @@
 ---
-layout: base.njk
+layout: page.njk
+title: Gallery
+bodyClasses: max-width-100
 ---
 
-<style>
-    body {
-        max-width: 100%;
-    }
-    img {
-        max-width: 25%;
-        margin: auto;
-        padding: 3rem;
-    }
-</style>
-<main>
-    <h1>Gallery</h1>
-    {% for image in collections.gallery %}
-        <a href="{{ image | replace(r/(.*\/).+\.jpg/g, '$1') }}#image-{{ image | replace(r/.*\/(.+)\.jpg/g, '$1') }}">
-            <img src="{{image}}" alt="" loading="lazy">
-        </a>
-    {% endfor %}
-</main>
+{% for section, pages in collections.gallery | groupByNested("page.section") %}
+    {% if section === 'Back matter' %}
+        {% for pageTitle, images in pages | groupByNested("page.title")  %}
+            <h2>{{ pageTitle }}</h2>
+            <div class="gallery">
+                {% for image in images %}
+                    <a href="{{ image.href }}">
+                        <img src="{{ image.src }}" alt="{{ image.alt }}" loading="lazy">
+                    </a>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    {% else %}
+        <h2>{{ section }}</h2>
+        {% for pageTitle, images in pages | groupByNested("page.title")  %}
+            <h3>{{ pageTitle }}</h3>
+            <div class="gallery">
+                {% for image in images %}
+                    <a href="{{ image.href }}">
+                        <img src="{{ image.src }}" alt="{{ image.alt }}" loading="lazy">
+                    </a>
+                {% endfor %}
+            </div>
+        {% endfor %}
+    {% endif %}
+{% endfor %}
