--- a/src/_includes/base.njk
+++ b/src/_includes/base.njk
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
     <link rel="stylesheet" href="/assets/styles.css">
   </head>
-  <body>
+  <body{% if bodyClasses %} class="{{ bodyClasses }}"{% endif %}>
     <script>document.documentElement.classList.remove('no-js');</script>
     {# Set theme inline to prevent flashing of default theme. -#}
     <script>
@@ -52,6 +52,11 @@
               You can contact me on Twitter at <a href="https://twitter.com/nickcolley">@nickcolley</a>
           </p>
       </details>
+      <p>
+        <a href="/gallery">
+            View all images in a gallery.
+        </a>
+      </p>
       <p>
         Digitally remastered by <a href="https://nickcolley.co.uk">Nick Colley</a>
       </p>
